# DataFlow

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README-zh.md  README.md  pyproject.toml  pytest.ini  requirements-kbc.txt  requirements-muxi.txt  requirements.txt  requirements_pdf2model&text2model.txt
.github/ISSUE_TEMPLATE/: 3-feature-request.yaml
.github/workflows/: test.yml
dataflow/: __init__.py  cli.py  logger.py  version.py  webui.py
dataflow/cli_funcs/: cli_env.py  cli_eval.py  cli_init.py  cli_pdf.py  cli_text.py  paths.py  pdf2model_pipeline_zn.md  utils.py
dataflow/core/: LLMServing.py  Pipeline.py  Wrapper.py  __init__.py  operator.py  prompt.py
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/: .gitignore  README.md  pyproject.toml  requirements.txt
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/.github/ISSUE_TEMPLATE/: 1-bug-reports.yaml  2-ask-for-help.yaml
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/.github/workflows/: test.yaml
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/licenses/: MIT.txt
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/test/: test_registed_op.py
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  version.py
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/operators/core/: my_format_str_prompted_generator.py  my_prompt_template_generator.py  my_prompted_generator.py
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/pipelines/: my_pipeline.py
dataflow/statics/scaffold/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/prompts/: core.py
test/: auto_test_for_api_pipeline.py  bad_case_text2sql.py  conftest.py  dataflow_agent_fronted_gradio.py  filt_big_git_file.sh  recommend_pipeline.bak.py  recommend_pipeline.py  recommend_pipeline_2.py  run_agent_fronted_gradio.py  test_API_conversations.py  test_agentic_rag.py  test_agentic_rag_eval.py  test_autoop.py  test_autoop_graph.py  test_batched_pipeline.py  test_batched_stream_pipeline.py  test_batchify.py  test_copy.py  test_copy_weak_ref.py  test_dataflow_agent.py  test_dataframe_col.py  test_dockbcleaning.py  test_func_call.py  test_general_text.py  test_general_text_refine.py  test_graph_reasoning_math_pipeline.py  test_litellm.py  test_llm_lang_filter_and_meta_scorer.py  test_pdfkbcleaning.py  test_pipelines.py  test_pretrain_filter_pipeline.py  test_prompt_template_with_reasoning.py  test_pt_filter.py  test_pt_synthetic.py  test_question_extract.py  test_ragkbcleaning.py  test_rare.py  test_read_xlsx.py  test_reasoning.py  test_reasoning_diy.py  (+11 more)
(+718 files in other folders)
